welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:13: error: ';' expected but 'for' found.
  }for (y <- 0 to l-1){
   ^